--- a/client/styles/core/margins.less
+++ b/client/styles/core/margins.less
@@ -37,6 +37,10 @@
     margin-top:50px !important;
 }
 /* Bottom */
+.bottom0
+{
+    margin-bottom:0px !important;
+}
 .bottom10
 {
     margin-bottom:10px !important;
