--- a/client/styles/layout/presentation/main.less
+++ b/client/styles/layout/presentation/main.less
@@ -43,6 +43,13 @@ h1,h2,h3,h4,h5,h6{
     color:#fff!important;
 }
 
+hr.large
+{
+    width:100%;
+    margin:30px auto;
+    opacity:0.8;
+}
+
 h1{
     font-family: "mk4"!important;
     font-size:40px;
@@ -87,7 +94,7 @@ body.presentation
 }
 
 .navbar-custom{
-    background-color: rgba(0,0,0,0.6)!important;
+    background-color: rgba(0,0,0,0.8)!important;
     padding:5px 0!important;
 }
 
