--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -6,20 +6,23 @@ body.presentation_auction_main
 
         .bid-amount
         {
-            font-size: 64px;
+            font-family: "mk4"!important;
+            font-size: 82px;
             color: #FA6900;
+            display: block;
         }
     }
     .bidder-detail
     {
         .bidder-img
         {
-            width: 80px;
+            width: 40px;
             display:inline-block;
             vertical-align:middle;
 
             .img-circle {
-                height:80px;
+                height:40px;
+                border:1px solid #fff;
                 margin: 0;
                 vertical-align:middle;
             }
@@ -30,12 +33,13 @@ body.presentation_auction_main
     {
         .bidder-img
         {
-            width: 80px;
+            width: 40px;
             display:inline-block;
             vertical-align:middle;
 
             .img-circle {
-                height:80px;
+                border:1px solid #fff;
+                height:40px;
                 margin: 0;
                 vertical-align:middle;
             }
