--- a/client/styles/core/colors.less
+++ b/client/styles/core/colors.less
@@ -7,6 +7,11 @@
 {
     background-color: #fff;
 }
+.bg-white-transparent
+{
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.2);
+}
 .bg-dark-gray
 {
     background-color: #777;
