--- a/client/templates/views/presentation/layout/footer.html
+++ b/client/templates/views/presentation/layout/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
     <footer id="mainFooter">
-        TBD
+        Developed with <i class="fa fa-heart"></i> and <i class="fa fa-smile-o"></i> by Enrico Foschi, Nauris Kolmanis, Emmanuel Acquah, Erol Ciftci for BattleHack
     </footer>
 </template>
