--- a/client/styles/layout/presentation/main.less
+++ b/client/styles/layout/presentation/main.less
@@ -32,7 +32,7 @@ body{
 }
 
 body, .btn{
-    font-family: 'bt_monobold', 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     text-decoration: none!important;
 }
 
@@ -51,7 +51,7 @@ hr.large
 }
 
 h1{
-    font-family: "mk4"!important;
+//    font-family: "mk4"!important;
     font-size:40px;
 }
 
@@ -110,8 +110,4 @@ body.presentation
 
 section{
     margin:0 0 60px;
-}
-
-.bidder-detail{
-    float: right;
 }
