--- a/client/styles/lib/grayscale.css
+++ b/client/styles/lib/grayscale.css
@@ -153,7 +153,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    font-family: 'bt_monobold', 'Open Sans', sans-serif !important;
+    font-family: 'Open Sans', sans-serif !important;
     /*background: url(/img/banner.png) no-repeat;*/
     /*background-color: #000;*/
     -webkit-background-size: cover;
