--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -7,9 +7,10 @@ body.presentation_auction_main
         .bid-amount
         {
             font-family: "mk4"!important;
-            font-size: 40px;
-            color: #FA6900;
+            font-size: 100px;
+            color: #00DEFA;
             display:block;
+            padding:0px 0 20px;
         }
     }
     .bidder-detail
