--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -1,5 +1,5 @@
 <template name="presentation.home.main">
-    <h1 class="page-title">Bid your best to shadow <br> a great master</h1>
+    <h1 class="page-title">Bid your best to shadow a great master</h1>
     <section id="shadowMasters" class="intro">
         <div class="container">
             {{#if shadowMasters}}
