--- a/client/styles/components/shadow-master.less
+++ b/client/styles/components/shadow-master.less
@@ -2,7 +2,7 @@
 
 .master-card
 {
-    background: #fff;
+    background: rgba(255,255,255,0.7);
     padding: 20px;
     color: #333;
     margin-bottom:15px;
