--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -2,15 +2,16 @@ body.presentation_auction_main
 {
     .bid-title
     {
-        font-size: 40px;
+        font-size: 54px;
 
         .bid-amount
         {
             font-family: "mk4"!important;
-            font-size: 100px;
+            font-size: 140px;
             color: #00DEFA;
             display:block;
             padding:0px 0 20px;
+            text-shadow: 4px 4px 2px #0B0569;
         }
     }
     .bidder-detail
