--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -11,7 +11,7 @@
                                     <div class="img-circle img-master"
                                          style="background-image:url('{{ masterPicture this}}')"></div>
                                     <span class="title">{{ masterFullName this}}</span>
-                                    <span class="subtitle">You will shadow:</span>
+                                    <span class="subtitle">You will shadow</span>
                                     <strong>{{ masterSkill this}}</strong>
                                     <hr/>
                                     <span class="subtitle">by donating to</span><strong>{{ masterCharity this}}</strong>
