--- a/client/templates/views/presentation/home/main.html
+++ b/client/templates/views/presentation/home/main.html
@@ -23,7 +23,7 @@
                     </div>
                 {{/each}}
             {{else}}
-                <p class="bottom0">Darn. There are no masters at the moment.</p>
+                <p class="bottom0 text-center">Darn. There are no masters at the moment.</p>
             {{/if}}
         </div>
     </section>
