--- a/client/styles/components/shadow-master.less
+++ b/client/styles/components/shadow-master.less
@@ -20,9 +20,9 @@
     .subtitle
     {
         display: block;
-        background: #aaa;
+        background: #717070;
         color: #fff;
-        padding: 2px 4px;
+        padding: 4px 11px;
         margin-bottom:10px;
     }
 }
