--- a/client/styles/layout/presentation/main.less
+++ b/client/styles/layout/presentation/main.less
@@ -115,3 +115,14 @@ section{
 .alert{
     font-size:18px;
 }
+
+.bid-sms{
+    margin-top:5px;
+}
+
+.euro{
+    position: absolute;
+    left: -27px;
+    font-size: 32px;
+    font-family: 'bt_monobold';
+}
