--- a/client/styles/core/forms.less
+++ b/client/styles/core/forms.less
@@ -10,7 +10,7 @@
         transition: all 0.3s linear;
         opacity: 0;
         font-weight: normal;
-        background:#eee;
+        background:#CEE7FF;
         padding:1px 4px;
         color:#444;
     }
