--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -31,6 +31,12 @@ body.presentation_auction_main
         }
     }
 
+    .bid-sms h2
+    {
+        font-size: 28px;
+        font-weight: normal;
+    }
+
     .previousBids
     {
         .bidder-img
