--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -33,8 +33,11 @@ body.presentation_auction_main
 
     .bid-sms h2
     {
-        font-size: 28px;
+        font-size: 19px;
+        line-height: 30px;
         font-weight: normal;
+        font-family: "Open Sans" !important;
+        margin: 9px 0px;
     }
 
     .previousBids
