--- a/client/styles/views/presentation/auction/main.less
+++ b/client/styles/views/presentation/auction/main.less
@@ -38,6 +38,12 @@ body.presentation_auction_main
         font-weight: normal;
         font-family: "Open Sans" !important;
         margin: 9px 0px;
+
+        .inline{
+            font-weight: 700;
+            color:#00DEFA;
+            font-size:22px;
+        }
     }
 
     .previousBids
