--- a/client/templates/views/presentation/auction/main.html
+++ b/client/templates/views/presentation/auction/main.html
@@ -66,10 +66,10 @@
                 </div>
 
                 <div class="bg-white-transparent pfull20 bid-sms">
-                    <h2>or send a text to {{number}} with <span class="inline">{{code}} {{newAmount}}</span></h2>
+                    <h2>or send a text to <span class="inline">{{number}}</span>  with <span class="inline">{{code}} {{newAmount}}</span></h2>
                 </div>
                 <div class="bg-white-transparent pfull20 bid-sms">
-                    <h2>or send a text to inbound@enrico.foschi.bymail.in with
+                    <h2>or send a text to <span class="inline">inbound@enrico.foschi.bymail.in</span> with
                         <span class="inline">{{code}} {{newAmount}}</span></h2>
                 </div>
             </div>
